# LED-matrix-8x8

./: .gitignore  CMakeLists.txt  led-matrix-cpp.ioc  main.cpp
Core/Inc/: animation.hpp  create_pattern.hpp  display.hpp  generate_pattern.hpp  io.hpp  main.h  matrix.hpp  pattern.hpp  pin.hpp  pixel.hpp  system_clock.h
Core/Src/: create_pattern.cpp  display.cpp  generate_pattern.cpp  gpio.c  io.cpp  main.cpp  matrix.cpp  pattern.cpp  pattern.hpp  pin.cpp  pixel.cpp  stm32f3xx_it.c  system_clock.cpp
Led_matrix/: .mxproject  Led_matrix.ioc
Led_matrix/Drivers/CMSIS/Device/ST/STM32F3xx/Include/: stm32f3xx.h
Led_matrix/EWARM/: Led_matrix.dep  Led_matrix.ewd  Led_matrix.ewp  Led_matrix.ewt  Project.eww
Led_matrix/EWARM/Led_matrix/Exe/: Led_matrix.sim
Led_matrix/EWARM/settings/: Led_matrix.Led_matrix.cspy.bat  Led_matrix.Led_matrix.general.xcl  Led_matrix.dbgdt  Led_matrix.dni  Project.wsdt  Project.wspos
Led_matrix/Inc/: animations.h  led.h  main.h  patterns.h
Led_matrix/Src/: animations.c  gpio.c  led.c  led_hw.c  main.c  patterns.c
Led_matrix/Test/: Test.dep  Test.ewd  Test.ewp  Test.ewt  main.c
Led_matrix/Test/Debug/Exe/: Test.sim
Led_matrix/Test/settings/: Test.Debug.cspy.bat  Test.Debug.driver.xcl  Test.Debug.general.xcl  Test.dbgdt  Test.dni
include/: animations.h  geometry.h  led.h  led_hw.h  led_types.h  patterns.h
lib/: CMakeLists.txt  animations.c  geometry.c  led.c  led_hw.c  patterns.c
lib/Inc/: led.h  patterns.h
lib/Src/: led.c  patterns.c
src/: CMakeLists.txt  main  main.c  main.cpp
